update app alfa
alfa version of the app html

--- a/ww/homepage.html
+++ b/ww/homepage.html
@@ -25,8 +25,8 @@
 		<div class="topbar container">
 			<div class="row">
 				<div class="colm-12 mx-auto d-block">
-				
-				<img src="img/topbar.png" class="img-fluid rounded-pill" alt="">
+				<a href="scoreboard.html">
+				<img src="img/top bar.png" class="img-fluid rounded-pill" alt=""></a>
 				
 				</div>
 			
