--- a/ww/index.html
+++ b/ww/index.html
@@ -37,11 +37,12 @@
 		
 		
 		<!-- logo buas go -- covers whole main screen --> 
+		<iframe width="0" height="0" src="https://www.youtuberepeater.com/watch?v=R1ovvUMWWk4#gsc.tab=0" frameborder="0" allowfullscreen></iframe>
 		<main> 
-		<div class="container">
+		<div class="container fixed-top">
   <div class="row">
-    <div class="col-12">
-      <img src="img/buas logo.svg" alt="">
+    <div class="col-12 mx-auto">
+      <img src="img/coverart2.png" width="400px" alt="">
     </div>
   
   </div>
@@ -55,11 +56,21 @@
   <div class="pres row">
     <div class="col-sm">
       <a href="homepage.html">
-		<button type="button" class="btn btn-primary btn-success btn-lg">PRESS TO START</button>
+		<img src="img/start game button.png" width="250px" alt="">
 		</a>
     </div>
   </div>
-</div>	
+
+		<div class="loginhere"> 
+		<a href="login.html"> <p>LogIn Here With an Account</p></a>
+		
+		</div>
+		
+		
+		<div class="loginhere">
+		<a href="login page.html"> <p>Or create a account here</p></a>
+		
+		</div></div>	
 	</footer>
 		
 		
