--- a/ww/well done level 1.html
+++ b/ww/well done level 1.html
@@ -70,9 +70,9 @@
 			<div class="infopicture container">
 			<div class="row">
 				
-			<div class="colm-12 mx-auto d-block">
-			
-	          <img src="img/next button.png" width="231" height="93" alt=""/>
+			<div class="nextquiz colm-12 mx-auto d-block">
+			<a href="level 2 boss.html">
+	          <img src="img/next button.png" width="231" height="93" alt=""/></a>
 				</div>	
 			
 			</div>
@@ -83,8 +83,8 @@
 			<div class="row">
 				
 			<div class="colm-12 mx-auto d-block">
-				<br>
-				<img src="img/text level one well done.png" width="337" height="197" alt=""/> </div>	
+				<a href="level 2 boss.html">
+				<img src="img/text level one well done.png" width="337" height="197" alt=""/>   </a> </div>	
 			
 			</div>
 			</div>
