--- a/ww/well done level 2.html
+++ b/ww/well done level 2.html
@@ -72,7 +72,8 @@
 				
 			<div class="colm-12 mx-auto d-block">
 			
-	          <img src="img/next button.png" width="231" height="93" alt=""/>
+				<a href="level 3 boss.html">
+	          <img src="img/next button.png" width="231" height="93" alt=""/></a>
 				</div>	
 			
 			</div>
@@ -97,8 +98,8 @@
 			<div class="colm-12 mx-auto d-block">
 			
 			
-			
-			  <img src="img/sign up link.png" width="223" height="37" alt=""/> </div>	
+			<a href="">
+			  <img src="img/sign up link.png" width="223" height="37" alt=""/> </a></div>	
 			
 			</div>
 			</div>	
