--- a/ww/well done level 3.html
+++ b/ww/well done level 3.html
@@ -70,9 +70,9 @@
 			<div class="infopicture container">
 			<div class="row">
 				
-			<div class="colm-12 mx-auto d-block">
-			
-	          <img src="img/next button.png" width="231" height="93" alt=""/>
+			<div class="nextquiz colm-12 mx-auto d-block">
+			<a href="level 4 boss.html">
+	          <img src="img/next button.png" width="231" height="93" alt=""/></a>
 				</div>	
 			
 			</div>
