--- a/ww/scoreboard.html
+++ b/ww/scoreboard.html
@@ -21,21 +21,24 @@
     <script src="js/bootstrap.min.js"></script>
 	  
 		<header>
-		<div class="topbar container"> 
-			<div class="row"> 
-				<div class="col-12">  
-						<img src="img/topbar.png" class="img-fluid"  alt="Responsive image">
-			        </div>
+	<div class="topbar container">
+			<div class="row">
+				<div class="colm-12 mx-auto d-block">
+				<a href="scoreboard.html">
+				<img src="img/top bar.png" class="img-fluid rounded-pill" alt=""></a>
+				
+				</div>
 			
 			</div>
-					</div>
+			
+		</div>
 		
 		</header>
 		
 	<main>
 		
 		<div class="title">
-		<h1>Score Board</h1>
+		<h3>Score Board</h3>
 		</div>
 		
 <div class="score">  
