--- a/ww/scoreboard.html
+++ b/ww/scoreboard.html
@@ -25,7 +25,7 @@
 			<div class="row">
 				<div class="colm-12 mx-auto d-block">
 				<a href="scoreboard.html">
-				<img src="img/top bar.png" class="img-fluid rounded-pill" alt=""></a>
+				<img src="img/top-bar.png" class="img-fluid rounded-pill" alt=""></a>
 				
 				</div>
 			
@@ -72,7 +72,7 @@
 			
 		<a class="btn btn-outline-secondary"  href="homepage.html" >
 		
-		<img src="img/Group 3777.png" width="242" height="91" alt=""/> </a>	
+		<img src="img/Group3777.png" width="242" height="91" alt=""/> </a>	
 	
 			
 	</div>
