--- a/ww/homepage.html
+++ b/ww/homepage.html
@@ -26,7 +26,7 @@
 			<div class="row">
 				<div class="colm-12 mx-auto d-block">
 				<a href="scoreboard.html">
-				<img src="img/top bar.png" class="img-fluid rounded-pill" alt=""></a>
+				<img src="img/top-bar.png" class="img-fluid rounded-pill" alt=""></a>
 				
 				</div>
 			
