--- a/ww/level2boss.html
+++ b/ww/level2boss.html
@@ -26,7 +26,7 @@
 			<div class="row">
 				<div class="colm-12 mx-auto d-block">
 				
-				<img src="img/top bar.png" class="img-fluid rounded-pill" alt="">
+				<img src="img/top-bar.png" class="img-fluid rounded-pill" alt="">
 				
 				</div>
 			
@@ -38,7 +38,7 @@
 			<div class="row">
 		<div class="colm-12 mx-auto d-block">
 			
-			<img src="img/level 2 bosses.png"  alt=""/> 
+			<img src="img/level2bosses.png"  alt=""/> 
 			</div>
 				</div>
 			</div>
@@ -73,7 +73,7 @@
 			<div class="colm-12 mx-auto d-block">
 			
 			<form>
-  <label for="fcode"><img src="img/text level one.png" width="297" height="22" alt=""/></font></label>
+  <label for="fcode"><img src="img/textlevelone.png" width="297" height="22" alt=""/></font></label>
   <br>
   <input type="text" id="fcode" name="fcode"><br>
 			  </form>
