--- a/ww/login.html
+++ b/ww/login.html
@@ -27,7 +27,7 @@
 			<div class="row">
 		<div class="colm-12 mx-auto d-block">
 			
-			<img src="img/Group 248.png" width="393" height="99" alt=""/> </div>
+			<img src="img/Group248.png" width="393" height="99" alt=""/> </div>
 				  </div>
 			</div>
 			
@@ -154,7 +154,7 @@ $(".submit").click(function(){
 				<div class="level 1 container">
 			<div class="row">
 		<div class="colm-12 mx-auto d-block">
-			<img src="img/sign up to create an account.png" width="223" height="37" alt=""/>
+			<img src="img/signuptocreateanaccount.png" width="223" height="37" alt=""/>
 			 </div>
 			  </div>
 			</div>
